# Phyre

./: .gitignore  .gitmodules  .travis.yml  Build.psm1  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_boost.bat  install.bat  install.ps1  install.sh  phyre.json  run_tests.ps1  run_tests.sh  spirv_compile.ps1
Applications/: CMakeLists.txt
Applications/ConfigurationDemos/: CMakeLists.txt  configuration_loader_demo.cpp  resource_manager_demo.cpp
Applications/GraphicsDemos/: CMakeLists.txt  draw_cube.cpp  draw_cube.h
Applications/LoggingDemos/: CMakeLists.txt  loggable_example.cpp
Applications/NetworkingDemos/: CMakeLists.txt  tcp_client_demo.cpp  tcp_server_demo.cpp
Applications/NetworkingDemos/XMPPDemos/: CMakeLists.txt  xmpp_client_demo.cpp
Applications/XMPPDemos/: CMakeLists.txt  xmpp_client_demo.cpp
GameEngine/: .CMakeLists.txt.swp  .gitignore  .gitignore.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  GameEngine.sln  Makefile  cmake_install.cmake
GameEngine/Common/: .gitignore  CMakeLists.txt  Chat.pb.cc  Chat.pb.h  Makefile  cmake_install.cmake
GameEngine/GameEngine/: GameEngine.vcxproj
GameEngine/GameEngine.Common/: GameEngine.Common.vcxproj  GameEngine.Common.vcxproj.filters
GameEngine/GameEngine.Logging/: GameEngine.Logging.vcxproj  GameEngine.Logging.vcxproj.filters  logger.cpp  logger.h  logging.h
GameEngine/GameEngine.Networking/: GameEngine.Networking.vcxproj
GameEngine/GameEngine.Networking.Chat/: GameEngine.Networking.Chat.vcxproj  GameEngine.Networking.Chat.vcxproj.filters  build_me.cpp  chat_client.cpp  chat_client.h  host_resolver.h  host_resolver_impl.cpp  host_resolver_impl.h  tcp_socket.h  tcp_socket_impl.cpp  tcp_socket_impl.h
GameEngine/GameEngine.Networking.Chat.Demo/: GameEngine.Networking.Chat.Demo.vcxproj  GameEngine.Networking.Chat.Demo.vcxproj.filters  chat_client_demo.cpp
GameEngine/GameEngine.Networking.Chat.Test/: GameEngine.Networking.Chat.Test.vcxproj  GameEngine.Networking.Chat.Test.vcxproj.filters  chat_tests.cpp  mock_host_resolver.h  mock_tcp_socket.h
GameEngine/GameEngineTesting/: .gitignore  CMakeLists.txt  game_engine_tests.cpp
GameEngine/Logging/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  easy_build.sh  log_level.h  loggable.h  logger.cpp  logger.h  logging.h
GameEngine/Logging/Examples/: CMakeLists.txt  loggable_example.cpp
GameEngine/Networking/: CMakeLists.txt  Makefile  cmake_install.cmake  fake_tcp_clients.h  host_resolver.cpp  host_resolver.h  host_resolver_impl.cpp  host_resolver_impl.h  networking_tests.cpp  networking_tests.h  tcp_client.cpp  tcp_client.h  tcp_connection.h  tcp_server.cpp  tcp_server.h  tcp_server_connection.cpp  tcp_server_connection.h  tcp_socket.cpp  tcp_socket.h  tcp_socket_impl.cpp  tcp_socket_impl.h
GameEngine/Networking/Chat/: .gitignore  CMakeLists.txt  Makefile  chat_client.cpp  chat_client.h  cmake_install.cmake  host_resolver_impl.h  tcp_socket_impl.h
GameEngine/Networking/Chat/Demo/: .chat_client_demo.cpp.swp  .gitignore  CMakeLists.txt  ChatClientDemo  Makefile  chat_client_demo.cpp  cmake_install.cmake
GameEngine/Networking/Chat/Test/: .gitignore  CMakeLists.txt  chat_tests.cpp
GameEngine/Networking/Examples/: CMakeLists.txt  TCPClientDemo  tcp_client_demo.cpp  tcp_server_demo.cpp
GameEngine/Networking/Test/: CMakeLists.txt  ChatTests  fake_tcp_clients.h  tcp_client_tests.cpp
GameEngine/Networking/XMPP/: CMakeLists.txt  authentication_selection.xml  authentication_selection_chunk2.xml  sasl.cpp  sasl.h  sasl_handshake.cpp  sasl_handshake.h  xmpp_client.cpp  xmpp_client.h  xmpp_state.h  xmpp_tests.cpp  xmpp_tests.h
GameEngine/Networking/XMPP/Examples/: CMakeLists.txt  xmpp_client_demo.cpp
GameEngine/Test/: CMakeLists.txt  game_engine_tests.cpp
Libs/Configuration/: CMakeLists.txt  application.cpp  application.h  configuration.cpp  configuration.h  configuration_loader.cpp  configuration_loader.h  loader.cpp  loader.h  provider.cpp  provider.h  resource_manager.cpp  resource_manager.h
Libs/Configuration/Test/: CMakeLists.txt  configuration_tests.cpp  configuration_tests.h
Libs/Graphics/: CMakeLists.txt  application.cpp  application.h  command_buffer_manager.cpp  command_buffer_manager.h  cursor.cpp  cursor.h  device_manager.cpp  device_manager.h  geometry.h  graphics_test_runner.cpp  graphics_tests.h  input.cpp  input.h  rendering_system.cpp  rendering_system.h  rendering_system_interface.h  swapchain_manager.cpp  swapchain_manager.h  uniform_buffer.cpp  uniform_buffer.h  vulkan_debugger.cpp  vulkan_debugger.h  vulkan_device.cpp  vulkan_device.h  vulkan_errors.cpp  vulkan_errors.h  vulkan_gpu.cpp  vulkan_gpu.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_loader.cpp  vulkan_loader.h  vulkan_memory_manager.cpp  vulkan_memory_manager.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_rendering_system.cpp  (+11 more)
Libs/Input/: CMakeLists.txt  handler.cpp  handler.h  input.cpp  input.h  os_window.cpp  os_window.h
Libs/Logging/: CMakeLists.txt  log_level.h  loggable_interface.h  logger.cpp  logger.h  logging.h
Libs/Networking/: CMakeLists.txt  fake_tcp_clients.h  host_resolver.cpp  host_resolver.h  networking_test_runner.cpp  networking_tests.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_server_connection.cpp  tcp_server_connection.h  tcp_socket.cpp  tcp_socket.h
Libs/Networking/Test/: CMakeLists.txt  fake_tcp_clients.h  networking_test_runner.cpp  networking_tests.cpp  networking_tests.h
Libs/Networking/XMPP/: CMakeLists.txt  sasl.cpp  sasl.h  xmpp_client.cpp  xmpp_client.h  xmpp_state.h  xmpp_test_runner.cpp  xmpp_tests.h
Libs/Utils/: CMakeLists.txt  test_loader.cpp  test_loader.h
Libs/XMPP/: CMakeLists.txt  sasl.cpp  sasl.h  xmpp_client.cpp  xmpp_client.h  xmpp_state.h  xmpp_test_runner.cpp  xmpp_tests.h
Libs/XMPP/Test/: CMakeLists.txt  xmpp_tests.cpp  xmpp_tests.h
Testing/: CMakeLists.txt  phyre_tests.cpp
Testing/Resources/XMPPTestResources/: authentication_selection.xml
Tests/: CMakeLists.txt  phyre_tests.cpp
(+23 files in other folders)
