cmake_minimum_required(VERSION 3.3)
if(Boost_FOUND)
    set(TEST_DEPENDENCY_DIRS ../Networking ../Networking/XMPP ../Logging)
    # The executable must run with gmock.dll in the same directory
    if (WIN32)
        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GMOCK_ROOT})
    endif()
    include_directories(${Boost_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS} ${TEST_DEPENDENCY_DIRS})
    link_directories(${GMOCK_LIBRARY_DIRS} ${Boost_LIBRARY_DIRS} ${GTEST_LIBRARY_DIRS} ${TEST_DEPENDENCY_DIRS})
    add_executable(GameEngineTests game_engine_tests.cpp)
    target_link_libraries(GameEngineTests ${Boost_LIBRARIES} gmock gtest Networking XMPP)
    if (WIN32)
        unset(CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    endif()
endif()
